--- a/app/src/main/res/layout/activity_image_select.xml
+++ b/app/src/main/res/layout/activity_image_select.xml
@@ -15,13 +15,12 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <ImageButton
-        android:id="@+id/start_image_selection"
+    <ImageView
+        android:id="@+id/start_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:scaleType="centerInside"
         />
 
     <android.support.v7.widget.Toolbar
