--- a/app/src/main/res/layout/activity_image_select.xml
+++ b/app/src/main/res/layout/activity_image_select.xml
@@ -21,6 +21,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:scaleType="matrix"
         />
 
     <android.support.v7.widget.Toolbar
